fix ie layout bugs, add font optimization

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 h1,
@@ -60,7 +61,7 @@ h3 {
 }
 
 .content {
-  flex-grow: 1;
+  flex: 1 0 auto;
 }
 
 .footer {
