--- a/src/components/movies/item/style.scss
+++ b/src/components/movies/item/style.scss
@@ -45,6 +45,7 @@
 
 .movie__plot {
   flex: 1;
+  flex: auto;
 }
 
 .movie__meta {
