--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,11 @@
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  font-display: swap;
 }
